# Neurospec-MCP

./: .gitignore  AGENTS.md  AGENTS_EN.md  README.md  README_EN.md  package-lock.json  package.json  ui设计.md
core/: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  uno.config.ts  vite.config.js
core/icons/: icon.icns
core/src/frontend/: App.vue  main.ts
core/src/frontend/assets/styles/: style.css
core/src/frontend/components/: AppContent.vue
core/src/frontend/components/base/: Alert.vue  Button.vue  Card.vue  Checkbox.vue  Collapse.vue  CollapseItem.vue  ImagePreview.vue  Input.vue  Modal.vue  Radio.vue  Spinner.vue  Switch.vue  Tag.vue  Textarea.vue  ToastContainer.vue  Tooltip.vue
core/src/frontend/components/common/: Capsule.vue  FeatureCard.vue  ProjectInfoCard.vue  UpdateModal.vue
core/src/frontend/components/layout/: LayoutWrapper.vue  MainLayout.vue
core/src/frontend/components/popup/: ActiveRulesPanel.vue  EnhancePreviewModal.vue  McpPopup.vue  MemorySuggestionModal.vue  MiniHistoryPanel.vue  MiniMemoryPanel.vue  PopupContent.vue  PopupHeader.vue  PopupInput.vue  PopupTabs.vue  index.ts
core/src/frontend/components/settings/: CustomPromptSettings.vue  FontSettings.vue  ReplySettings.vue  ShortcutSettings.vue  ThemeSettings.vue  VersionChecker.vue  (+1 more)
core/src/frontend/composables/: useAppInitialization.ts  useAppManager.ts  useEmbedding.ts  useEventHandlers.ts  useExitWarning.ts  useMcpHandler.ts  useMemory.ts  useSettings.ts  useSystemStatus.ts  useTheme.ts  useToast.ts  useVersionCheck.ts
core/src/frontend/constants/: prompts.ts
core/src/frontend/test/: TestApp.vue  index.html
core/src/frontend/theme/: colors.ts  index.ts
core/src/rust/: lib.rs  main.rs
core/src/rust/app/: builder.rs  cli.rs  commands.rs  setup.rs
core/src/rust/config/: mod.rs  settings.rs  storage.rs  watcher.rs
core/src/rust/constants/: app.rs  mcp.rs  mod.rs  theme.rs  validation.rs
core/src/rust/daemon/: client.rs  commands.rs  context_orchestrator.rs  mod.rs  popup_handler.rs  routes.rs  server.rs  types.rs  ws_handler.rs
core/src/rust/mcp/: commands.rs  compat.rs  dispatcher.rs  mod.rs  registry.rs  server.rs  tool_registry.rs  types.rs
core/src/rust/neurospec/: mod.rs
core/src/rust/ui/: agents_commands.rs  commands.rs  exit.rs  mod.rs  tray.rs  updater.rs  window.rs
core/src/rust/utils/: logger.rs
(+78 files in other folders)
