[package]
name = "neurospec"
version = "0.4.0"
edition = "2021"
default-run = "NeuroSpec"

[lib]
path = "src/rust/lib.rs"

[[bin]]
name = "NeuroSpec"
path = "src/rust/main.rs"

[[bin]]
name = "NeuroSpec-MCP"
path = "src/rust/bin/mcp_server.rs"

[dependencies]
tauri = { version = "2.0", features = [
  "tray-icon",
  "image-ico",
  "image-png"
] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-single-instance = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
  "rt-multi-thread", # MCP server and async tasks
  "macros", # For #[tokio::main] macro
  "fs", # File operations
  "process", # Command::new()
  "sync", # oneshot channel
  "time", # sleep()
  "net" # TCP server for HTTP daemon
] }
# Web server dependencies for daemon mode
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = [
  "cors",
  "trace"
] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
dirs = "5.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "server",
  "transport-io"
] }
schemars = "0.8"
reqwest = { version = "0.11", features = [
  "stream",
  "json"
] }
futures = "0.3"
regex = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
percent-encoding = "2.3"
ring = "0.17"
hex = "0.4"
ignore = "0.4"
encoding_rs = "0.8"
globset = "0.4"
notify = "6.1"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
rayon = "1.8"
petgraph = "0.8.3"
tempfile = "3.23.0"
walkdir = "2.4"
zstd = "=0.12.4"
zstd-safe = "=6.0.6"
tantivy = { version = "0.21", default-features = false, features = [ "default" ] }
rusqlite = { version = "0.31", features = [ "bundled" ] }
base64 = "0.22.1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["experimental-neurospec"]
experimental-neurospec = []

# 发布版本优化配置
[profile.release]
opt-level = "z" # 优化体积而非速度
lto = true # 链接时优化，减少最终二进制大小
codegen-units = 1 # 减少代码生成单元，提高优化效果
panic = "abort" # 减少panic处理代码
strip = true # 移除调试符号
